fix: contract analysis text on mobile

--- a/src/components/Token/ContractAnalysis/ContractAnalysis.module.css
+++ b/src/components/Token/ContractAnalysis/ContractAnalysis.module.css
@@ -20,7 +20,7 @@
 
 .indicatorStatus {
   border-radius: 2px;
-  width: 86px;
+  max-width: 86px;
   height: 20px;
   text-align: center;
   font-size: 10px;
@@ -29,6 +29,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .detected {
